Dev/src/Prodly Moover/objects/DataSet__c.object
<CustomObject>
    <description>Describes a set of data to be migrated.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Upsert_Record_Handling__c</fullName>
        <label>Upsert Record Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual External ID</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Standard Upsert</fullName>
                </value>
                <value>
                    <fullName>Match First Found</fullName>
                </value>
                <value>
                    <fullName>Skip Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Set_Name__c</fullName>
        <formula>IF(Root__c, 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK(&quot;/?sort=&quot; &amp; Name , &quot;&quot;) &amp; HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; Id &amp; 
&quot;/view&quot;, Name, &quot;_self&quot;) 
,HYPERLINK(&quot;/?sort=&quot; &amp; Name , &quot;&quot;) &amp; HYPERLINK(&quot;/&quot;&amp;Id, Name, &quot;_self&quot;) ) , 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK(&quot;/?sort=&quot; &amp; Root_Data_Set__r.Name, &quot;&quot;) &amp; 
HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; Root_Data_Set__r.Id &amp; &quot;/view&quot;, 
Root_Data_Set__r.Name, &quot;_self&quot;), HYPERLINK(&quot;/?sort=&quot; &amp; Root_Data_Set__r.Name, &quot;&quot;) &amp; 
HYPERLINK(&quot;/&quot;&amp;Root_Data_Set__r.Id, 
Root_Data_Set__r.Name, &quot;_self&quot;)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder Name</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipName>Folder_Data_Set_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ignore_Namespace_Name__c</fullName>
        <label>Ignore Namespace Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Namespace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Namespace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Relationship_Constraints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Relationship Constraints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schema Org</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Root_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Root Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Query_Filter__c</fullName>
        <label>Query Filter</label>
        <length>950</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Selection_Limit__c</fullName>
        <label>Record Selection Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replicate_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replicate Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replicate_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replicate Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Set Root</label>
        <referenceTo>DataSet__c</referenceTo>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Root</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Audit_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Audit Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Picklist_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Picklist Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Local_Schema__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Local Schema</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Set_Name__c</columns>
        <columns>Folder__c</columns>
        <columns>ObjectName__c</columns>
        <columns>Active__c</columns>
        <columns>Root__c</columns>
        <columns>Root_Data_Set__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Origin_Connection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Root_Data_Sets</fullName>
        <columns>NAME</columns>
        <columns>Data_Set_Name__c</columns>
        <columns>Folder__c</columns>
        <columns>ObjectName__c</columns>
        <columns>Root__c</columns>
        <columns>Active__c</columns>
        <columns>Origin_Connection__c</columns>
        <columns>Use_Local_Schema__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Root__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Data Sets (Root Elements)</label>
    </listViews>
    <nameField>
        <label>Data Set Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>